--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
-name: svgaplayer_flutter
+name: svgaplayer_flutter_rhr
 description: The SVGAPlayer implementation of Flutter using CustomPainter.
-version: 2.2.0
-homepage: https://github.com/yyued/SVGAPlayer-Flutter
+version: 2.2.1
+homepage: https://github.com/RenHaiRenWjc/SVGAPlayer-Flutter.git
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   protobuf: ^2.0.0
-  http: ^0.13.3
+  http: ^1.0.0
   path_drawing: ^1.0.0
   archive: ^3.1.2
 
